feat: basic pool abstract

--- a/packages/v4-sdk/package.json
+++ b/packages/v4-sdk/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "viem": "1.19.11",
+    "@pancakeswap/swap-sdk-core": "workspace:*",
     "@pancakeswap/v3-sdk": "workspace:*"
   },
   "devDependencies": {
