--- a/packages/widgets-internal/tsconfig.json
+++ b/packages/widgets-internal/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "@pancakeswap/tsconfig/react-library",
   "compilerOptions": {
     "resolveJsonModule": true,
+    "target": "ES2020",
     "baseUrl": "./",
     "paths": {
       "@pancakeswap/uikit": ["../../packages/uikit/src/index.ts"],
