feat: add pm test

--- a/packages/gauges/package.json
+++ b/packages/gauges/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@pancakeswap/sdk": "workspace:^",
+    "@pancakeswap/position-managers": "workspace:^",
     "@types/lodash": "^4.14.202",
     "lodash": "^4.17.21",
     "tsup": "^6.7.0"
