--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -43,6 +43,8 @@
     "@gelatonetwork/limit-orders-lib": "^4.1.0",
     "@gnosis.pm/safe-apps-wagmi": "^1.2.0",
     "@next/bundle-analyzer": "13.0.7",
+    "@orbs-network/twap-ui": "0.9.96",
+    "@orbs-network/twap-ui-pancake": "0.9.96",
     "@pancakeswap/blog": "workspace:*",
     "@pancakeswap/chains": "workspace:*",
     "@pancakeswap/farms": "workspace:*",
