--- a/packages/uikit/package.json
+++ b/packages/uikit/package.json
@@ -95,6 +95,7 @@
     "react-router-dom": "^5.2.0",
     "react-transition-group": "*",
     "remark-gfm": "*",
+    "rollup-plugin-node-builtins": "^2.1.2",
     "storybook": "^7.0.7",
     "styled-components": "6.0.7",
     "vite": "5.0.12",
