--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -37,7 +37,7 @@
   "dependencies": {
     "@binance/w3w-utils": "1.1.4",
     "@binance/w3w-wagmi-connector-v2": "^1.1.6",
-    "@cyberlab/cyber-app-sdk": "2.4.4",
+    "@cyberlab/cyber-app-sdk": "v3.0.0-beta.5",
     "@datadog/browser-logs": "^5.8.0",
     "@datadog/browser-rum": "^5.8.0",
     "@gelatonetwork/limit-orders-lib": "^4.1.0",
