--- a/packages/pools/package.json
+++ b/packages/pools/package.json
@@ -22,8 +22,7 @@
     "@pancakeswap/tokens": "workspace:*",
     "bignumber.js": "^9.0.0",
     "lodash": "^4.17.21",
-    "viem": "2.8.13",
-    "wagmi": "2.5.11"
+    "viem": "2.9.18"
   },
   "devDependencies": {
     "@pancakeswap/tsconfig": "workspace:*",
