--- a/packages/position-managers/package.json
+++ b/packages/position-managers/package.json
@@ -15,8 +15,7 @@
     "@pancakeswap/v3-sdk": "workspace:*",
     "bignumber.js": "^9.0.0",
     "lodash": "^4.17.21",
-    "viem": "2.8.13",
-    "wagmi": "2.5.11"
+    "viem": "2.9.18"
   },
   "devDependencies": {
     "@pancakeswap/tsconfig": "workspace:*",
