--- a/packages/prediction/package.json
+++ b/packages/prediction/package.json
@@ -14,8 +14,7 @@
     "@pancakeswap/chains": "workspace:*",
     "@pancakeswap/pools": "workspace:*",
     "@pancakeswap/tokens": "workspace:*",
-    "viem": "2.8.13",
-    "wagmi": "2.5.11"
+    "viem": "2.9.18"
   },
   "devDependencies": {
     "@pancakeswap/sdk": "workspace:*",
