--- a/packages/uikit/package.json
+++ b/packages/uikit/package.json
@@ -136,8 +136,7 @@
     "react-popper": "^2.3.0",
     "sonner": "^1.2.4",
     "styled-system": "^5.1.5",
-    "tslib": "^2.2.0",
-    "wagmi": "2.5.11"
+    "tslib": "^2.2.0"
   },
   "publishConfig": {
     "access": "public"
