--- a/apps/gamification/package.json
+++ b/apps/gamification/package.json
@@ -20,8 +20,10 @@
     "@pancakeswap/utils": "workspace:*",
     "@pancakeswap/widgets-internal": "workspace:*",
     "@pancakeswap/ui-wallets": "workspace:*",
+    "@pancakeswap/tokens": "workspace:*",
+    "@pancakeswap/wagmi": "workspace:*",
     "@reduxjs/toolkit": "^1.9.1",
-    "@tanstack/react-query": "^5.18.0",
+    "@tanstack/react-query": "^5.28.4",
     "@vanilla-extract/next-plugin": "^2.3.0",
     "bignumber.js": "^9.1.2",
     "blocto": "link:@pancakeswap/wagmi/connectors/blocto",
@@ -40,8 +42,8 @@
     "styled-components": "6.0.7",
     "swiper": "^11.0.5",
     "trustWallet": "link:@pancakeswap/wagmi/connectors/trustWallet",
-    "viem": "1.19.11",
-    "wagmi": "1.4.13"
+    "viem": "2.9.19",
+    "wagmi": "2.5.20"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "13.4.2",
