--- a/packages/stable-swap-sdk/package.json
+++ b/packages/stable-swap-sdk/package.json
@@ -16,7 +16,7 @@
     "build": "tsup",
     "dev": "tsup --watch",
     "test": "vitest --run",
-    "update:snapshot": "vitest -u",
+    "update:snapshot": "vitest -u --run",
     "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist"
   },
   "files": [
