--- a/apps/bridge/package.json
+++ b/apps/bridge/package.json
@@ -8,6 +8,22 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "browserslist": {
+    "production": [
+      "chrome >= 67",
+      "edge >= 79",
+      "firefox >= 68",
+      "opera >= 54",
+      "safari >= 14"
+    ],
+    "development": [
+      ">0.2%",
+      "not ie <= 99",
+      "not android <= 4.4.4",
+      "not dead",
+      "not op_mini all"
+    ]
+  },
   "dependencies": {
     "@0xsquid/widget": "^1.6.0",
     "@material-ui/core": "^4.12.4",
