--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -83,6 +83,7 @@
     "@web3inbox/core": "1.2.0",
     "@web3inbox/react": "1.2.0",
     "@yornaath/batshit": "^0.9.0",
+    "@wagmi/core": "2.6.17",
     "ajv": "^6.12.3",
     "bignumber.js": "^9.0.0",
     "bottleneck": "^2.19.5",
