--- a/packages/v4-sdk/package.json
+++ b/packages/v4-sdk/package.json
@@ -26,9 +26,11 @@
     "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist"
   },
   "dependencies": {
-    "viem": "1.19.11",
+    "@pancakeswap/sdk": "workspace:*",
     "@pancakeswap/swap-sdk-core": "workspace:*",
-    "@pancakeswap/v3-sdk": "workspace:*"
+    "@pancakeswap/v3-sdk": "workspace:*",
+    "tiny-invariant": "^1.3.3",
+    "viem": "1.19.11"
   },
   "devDependencies": {
     "tsup": "^6.7.0"
