chore: bump nodejs

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "prepare": "husky install"
   },
   "engines": {
-    "node": ">=16.0.0"
+    "node": ">=18.0.0"
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
@@ -73,7 +73,8 @@
     "wrangler": "2.20.2"
   },
   "volta": {
-    "node": "18.16.0"
+    "node": "20.12.2",
+    "pnpm": "8.15.8"
   },
   "dependencies": {
     "encoding": "^0.1.13",
