chore: update snapshot

--- a/packages/ifos/package.json
+++ b/packages/ifos/package.json
@@ -4,7 +4,8 @@
   "sideEffects": false,
   "private": true,
   "scripts": {
-    "test": "vitest --run"
+    "test": "vitest --run",
+    "test:u": "vitest -u --run"
   },
   "type": "module",
   "peerDependencies": {
