chore: Bump nextjs 14 (#9660)
<!--
Before opening a pull request, please read the [contributing
guidelines](https://github.com/pancakeswap/pancake-frontend/blob/develop/CONTRIBUTING.md)
first
-->

<!-- start pr-codex -->

---

## PR-Codex overview
This PR updates `next` to version `14.2.3` across multiple packages and
adds `@tanstack/query-core` as a transpiled package.

### Detailed summary
- Updated `next` to version `14.2.3` in various package.json files
- Added `@tanstack/query-core` as a transpiled package in multiple
`next.config.mjs` files
- Modified code in `apps/bridge/components/layerZero/index.tsx` for
error handling
- Added a polyfill for `whenDefined` in
`apps/bridge/utils/whenDefinedPolyfill.ts`

> The following files were skipped due to too many changes:
`pnpm-lock.yaml`

> ✨ Ask PR-Codex anything about this PR by commenting with `/codex {your
question}`

<!-- end pr-codex -->

---------

Co-authored-by: Chef Jerry <jerry@pancakeswap.com>

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -92,6 +92,7 @@
     "chart.js": "^4.4.0",
     "clsx": "^1.2.1",
     "cookies-next": "^2.1.1",
+    "core-js": "^3.37.0",
     "crypto-js": "^4.2.0",
     "d3": "^7.8.2",
     "dayjs": "^1.11.10",
@@ -106,7 +107,7 @@
     "local-storage": "^2.0.0",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
-    "next": "13.5.6",
+    "next": "14.2.3",
     "next-seo": "^5.15.0",
     "next-themes": "^0.2.1",
     "polished": "^4.2.2",
@@ -136,7 +137,7 @@
     "zod": "^3.22.3"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "13.4.2",
+    "@next/eslint-plugin-next": "14.2.3",
     "@pancakeswap/next-config": "workspace:*",
     "@pancakeswap/tsconfig": "workspace:*",
     "@stylelint/postcss-css-in-js": "^0.37.2",
