--- a/apps/bridge/package.json
+++ b/apps/bridge/package.json
@@ -8,6 +8,22 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "browserslist": {
+    "production": [
+      "chrome >= 67",
+      "edge >= 79",
+      "firefox >= 68",
+      "opera >= 54",
+      "safari >= 14"
+    ],
+    "development": [
+      ">0.2%",
+      "not ie <= 99",
+      "not android <= 4.4.4",
+      "not dead",
+      "not op_mini all"
+    ]
+  },
   "dependencies": {
     "@0xsquid/widget": "^1.6.0",
     "@material-ui/core": "^4.12.4",
@@ -22,7 +38,7 @@
     "ethers": "^5.0.0",
     "jotai": "^2.4.3",
     "lodash": "^4.17.21",
-    "next": "13.5.6",
+    "next": "14.2.3",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -32,7 +48,7 @@
     "wagmi": "2.5.20"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "13.4.2",
+    "@next/eslint-plugin-next": "14.2.3",
     "@pancakeswap/next-config": "workspace:*",
     "@pancakeswap/tsconfig": "workspace:*",
     "@types/node": "18.0.4",
