--- a/apps/gamification/package.json
+++ b/apps/gamification/package.json
@@ -58,6 +58,7 @@
     "@types/react-dom": "^18.0.6",
     "@types/styled-system": "^5.1.17",
     "eslint": "^8.32.0",
-    "eslint-plugin-lodash": "^7.4.0"
+    "eslint-plugin-lodash": "^7.4.0",
+    "@types/d3": "^7.4.0"
   }
 }
