--- a/apps/gamification/package.json
+++ b/apps/gamification/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@binance/w3w-wagmi-connector-v2": "^1.2.3",
     "@cyberlab/cyber-app-sdk": "v3.0.0-beta.5",
+    "@gnosis.pm/safe-apps-wagmi": "^1.2.0",
     "@pancakeswap/chains": "workspace:*",
     "@pancakeswap/hooks": "workspace:*",
     "@pancakeswap/localization": "workspace:*",
@@ -25,6 +26,7 @@
     "@reduxjs/toolkit": "^1.9.1",
     "@tanstack/react-query": "^5.28.4",
     "@vanilla-extract/next-plugin": "^2.3.0",
+    "@wagmi/core": "2.6.17",
     "bignumber.js": "^9.1.2",
     "blocto": "link:@pancakeswap/wagmi/connectors/blocto",
     "dayjs": "^1.11.10",
