--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -110,6 +110,7 @@
     "next": "14.2.3",
     "next-seo": "^5.15.0",
     "next-themes": "^0.2.1",
+    "nuqs": "^1.17.4",
     "polished": "^4.2.2",
     "qs": "^6.0.0",
     "react": "^18.2.0",
