--- a/apps/bridge/.eslintrc
+++ b/apps/bridge/.eslintrc
@@ -4,7 +4,7 @@
     "browser": true
   },
   "plugins": ["lodash"],
-  "extends": ["plugin:@next/next/recommended"],
+  "extends": ["plugin:@next/next/recommended", "../../packages/eslint-config/lib/next-page-router.js"],
   "rules": {
     "no-restricted-syntax": 0,
     "import/no-unresolved": 0,
