--- a/apis/routing/wrangler.toml
+++ b/apis/routing/wrangler.toml
@@ -28,4 +28,5 @@ crons = ["*/30 * * * *"]
 # - BSC_NODE
 # - BSC_TESTNET_NODE
 # - NODE_REAL_SUBGRAPH_API_KEY
+# - THE_GRAPH_API_KEY
 # Run `echo <VALUE> | wrangler secret put <NAME>` for each of these
