--- a/packages/achievements/package.json
+++ b/packages/achievements/package.json
@@ -7,12 +7,6 @@
     "test": "vitest --run"
   },
   "type": "module",
-  "dependencies": {
-    "qs": "^6.0.0",
-    "lodash": "^4.17.21"
-  },
-  "devDependencies": {
-    "@types/lodash": "^4.14.168",
-    "@types/qs": "^6.0.0"
-  }
+  "dependencies": {},
+  "devDependencies": {}
 }
