--- a/apps/gamification/package.json
+++ b/apps/gamification/package.json
@@ -46,7 +46,9 @@
     "swiper": "^11.0.5",
     "trustWallet": "link:@pancakeswap/wagmi/connectors/trustWallet",
     "viem": "2.13.3",
-    "wagmi": "2.9.8"
+    "wagmi": "2.9.8",
+    "easymde": "2.16.1",
+    "react-datepicker": "^4.8.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "14.2.3",
