--- a/apps/gamification/package.json
+++ b/apps/gamification/package.json
@@ -52,7 +52,9 @@
     "swiper": "^11.0.5",
     "trustWallet": "link:@pancakeswap/wagmi/connectors/trustWallet",
     "viem": "2.13.3",
-    "wagmi": "2.9.8"
+    "wagmi": "2.9.8",
+    "graphql": "^16.8.1",
+    "graphql-request": "5.0.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "14.2.3",
