--- a/apps/gamification/package.json
+++ b/apps/gamification/package.json
@@ -37,6 +37,7 @@
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-jazzicon": "^1.0.4",
     "react-redux": "^8.0.5",
     "react-wrap-balancer": "^0.4.0",
     "redux-persist": "^6.0.0",
