--- a/apps/gamification/package.json
+++ b/apps/gamification/package.json
@@ -28,6 +28,7 @@
     "@vanilla-extract/next-plugin": "^2.3.0",
     "@wagmi/core": "2.10.5",
     "bignumber.js": "^9.1.2",
+    "react-window": "^1.8.7",
     "blocto": "link:@pancakeswap/wagmi/connectors/blocto",
     "dayjs": "^1.11.10",
     "easymde": "2.16.1",
@@ -63,6 +64,7 @@
     "@types/react-dom": "^18.0.6",
     "@types/styled-system": "^5.1.17",
     "eslint": "^8.32.0",
-    "eslint-plugin-lodash": "^7.4.0"
+    "eslint-plugin-lodash": "^7.4.0",
+    "@types/react-window": "^1.8.8"
   }
 }
