--- a/apps/gamification/package.json
+++ b/apps/gamification/package.json
@@ -29,7 +29,6 @@
     "@vanilla-extract/next-plugin": "^2.3.0",
     "@wagmi/core": "2.10.5",
     "bignumber.js": "^9.1.2",
-    "react-window": "^1.8.7",
     "blocto": "link:@pancakeswap/wagmi/connectors/blocto",
     "dayjs": "^1.11.10",
     "easymde": "2.16.1",
@@ -42,8 +41,10 @@
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-draggable-list": "4.0.4",
+    "react-images-uploading": "^3.1.7",
     "react-jazzicon": "^1.0.4",
     "react-redux": "^8.0.5",
+    "react-window": "^1.8.7",
     "react-wrap-balancer": "^0.4.0",
     "redux-persist": "^6.0.0",
     "split-grid": "^1.0.11",
@@ -63,9 +64,9 @@
     "@types/react": "^18.2.21",
     "@types/react-datepicker": "^4.4.1",
     "@types/react-dom": "^18.0.6",
+    "@types/react-window": "^1.8.8",
     "@types/styled-system": "^5.1.17",
     "eslint": "^8.32.0",
-    "eslint-plugin-lodash": "^7.4.0",
-    "@types/react-window": "^1.8.8"
+    "eslint-plugin-lodash": "^7.4.0"
   }
 }
