--- a/apps/gamification/package.json
+++ b/apps/gamification/package.json
@@ -12,25 +12,25 @@
     "node": ">=16.0.0"
   },
   "dependencies": {
-    "@datadog/browser-logs": "^5.8.0",
-    "@datadog/browser-rum": "^5.8.0",
     "@binance/w3w-wagmi-connector-v2": "^1.2.3",
     "@cyberlab/cyber-app-sdk": "v3.0.0-beta.5",
+    "@datadog/browser-logs": "^5.8.0",
+    "@datadog/browser-rum": "^5.8.0",
     "@gnosis.pm/safe-apps-wagmi": "^1.2.0",
+    "@pancakeswap/achievements": "workspace:*",
     "@pancakeswap/chains": "workspace:*",
     "@pancakeswap/hooks": "workspace:*",
+    "@pancakeswap/ifos": "workspace:*",
     "@pancakeswap/localization": "workspace:*",
+    "@pancakeswap/multicall": "workspace:*",
     "@pancakeswap/prediction": "workspace:*",
     "@pancakeswap/sdk": "workspace:*",
-    "@pancakeswap/achievements": "workspace:*",
-    "@pancakeswap/ifos": "workspace:*",
+    "@pancakeswap/smart-router": "workspace:*",
     "@pancakeswap/swap-sdk-core": "workspace:*",
     "@pancakeswap/tokens": "workspace:*",
-    "@pancakeswap/multicall": "workspace:*",
     "@pancakeswap/ui-wallets": "workspace:*",
     "@pancakeswap/uikit": "workspace:*",
     "@pancakeswap/utils": "workspace:*",
-    "@pancakeswap/smart-router": "workspace:*",
     "@pancakeswap/wagmi": "workspace:*",
     "@pancakeswap/widgets-internal": "workspace:*",
     "@reduxjs/toolkit": "^1.9.1",
@@ -41,11 +41,14 @@
     "blocto": "link:@pancakeswap/wagmi/connectors/blocto",
     "dayjs": "^1.11.10",
     "easymde": "2.16.1",
+    "graphql": "^16.8.1",
+    "graphql-request": "5.0.0",
     "jotai": "^2.4.3",
     "lodash": "^4.17.21",
     "next": "14.2.3",
     "next-seo": "^5.15.0",
     "next-themes": "^0.2.1",
+    "oauth": "^0.10.0",
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
@@ -61,9 +64,7 @@
     "swiper": "^11.0.5",
     "trustWallet": "link:@pancakeswap/wagmi/connectors/trustWallet",
     "viem": "2.13.3",
-    "wagmi": "2.9.8",
-    "graphql": "^16.8.1",
-    "graphql-request": "5.0.0"
+    "wagmi": "2.9.8"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "14.2.3",
@@ -75,10 +76,10 @@
     "@types/react": "^18.2.21",
     "@types/react-datepicker": "^4.4.1",
     "@types/react-dom": "^18.0.6",
+    "@types/react-redux": "^7.1.24",
     "@types/react-window": "^1.8.8",
     "@types/styled-system": "^5.1.17",
     "eslint": "^8.32.0",
-    "eslint-plugin-lodash": "^7.4.0",
-    "@types/react-redux": "^7.1.24"
+    "eslint-plugin-lodash": "^7.4.0"
   }
 }
