--- a/apps/gamification/package.json
+++ b/apps/gamification/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev -p 3005",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint '**/*.{js,jsx,ts,tsx}'"
+  },
+  "engines": {
+    "node": ">=18.20.0"
   },
   "dependencies": {
     "@binance/w3w-wagmi-connector-v2": "^1.2.3",
