--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -108,6 +108,7 @@
     "local-storage": "^2.0.0",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
+    "lottie-react": "^2.4.0",
     "next": "14.2.3",
     "next-seo": "^5.15.0",
     "next-themes": "^0.2.1",
