feat: Add chef penguin

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-*       @chef-jojo @ChefMomota @Chef-Yogi @chefjackson @ChefJerry @ChefBingbong
+*       @chef-jojo @ChefMomota @Chef-Yogi @chefjackson @ChefJerry @ChefBingbong @thechefpenguin
