--- a/packages/awgmi/package.json
+++ b/packages/awgmi/package.json
@@ -18,6 +18,7 @@
     "wallets"
   ],
   "peerDependencies": {
+    "@aptos-labs/ts-sdk": "1.x",
     "@blocto/sdk": "^0.5.4",
     "@msafe/aptos-wallet": "^3.0.6",
     "@tanstack/react-query": "5.x",
@@ -25,6 +26,7 @@
     "react": "^18.2.0"
   },
   "devDependencies": {
+    "@aptos-labs/ts-sdk": "^1.20.0",
     "@blocto/sdk": "^0.5.4",
     "@msafe/aptos-wallet": "^3.0.6",
     "@pancakeswap/tsconfig": "workspace:*",
