--- a/packages/awgmi/package.json
+++ b/packages/awgmi/package.json
@@ -26,7 +26,7 @@
     "react": "^18.2.0"
   },
   "devDependencies": {
-    "@aptos-labs/ts-sdk": "^1.20.0",
+    "@aptos-labs/ts-sdk": "1.12.2",
     "@blocto/sdk": "^0.5.4",
     "@msafe/aptos-wallet": "^3.0.6",
     "@pancakeswap/tsconfig": "workspace:*",
