--- a/apps/gamification/package.json
+++ b/apps/gamification/package.json
@@ -61,6 +61,7 @@
     "graphql": "^16.8.1",
     "graphql-request": "5.0.0",
     "jotai": "^2.4.3",
+    "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
