--- a/apps/bridge/package.json
+++ b/apps/bridge/package.json
@@ -33,7 +33,6 @@
     "@pancakeswap/uikit": "workspace:*",
     "@pancakeswap/utils": "workspace:*",
     "@vanilla-extract/next-plugin": "^2.3.0",
-    "@wagmi/core": "^0.10.11",
     "@wormhole-foundation/wormhole-connect": "0.1.7",
     "ethers": "^5.0.0",
     "jotai": "^2.4.3",
@@ -44,8 +43,8 @@
     "react-dom": "^18.2.0",
     "styled-components": "6.0.7",
     "styled-jsx": "5.1.1",
-    "viem": "2.13.3",
-    "wagmi": "2.9.8"
+    "viem": "catalog:",
+    "wagmi": "catalog:"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "14.2.3",
