--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -75,7 +75,7 @@
     "@pancakeswap/widgets-internal": "workspace:*",
     "@pythnetwork/pyth-evm-js": "^1.29.2",
     "@reduxjs/toolkit": "^1.9.1",
-    "@sentry/nextjs": "^7.52.1",
+    "@sentry/nextjs": "^8.16.0",
     "@snapshot-labs/snapshot.js": "^0.4.40",
     "@tanstack/react-query": "^5.28.4",
     "@usdv/usdv-widget": "^0.9.9",
@@ -136,8 +136,8 @@
     "swiper": "^11.0.5",
     "tiny-invariant": "^1.3.0",
     "uuid": "^8.0.0",
-    "viem": "2.13.3",
-    "wagmi": "2.9.8",
+    "viem": "catalog:",
+    "wagmi": "catalog:",
     "zod": "^3.22.3"
   },
   "devDependencies": {
