--- a/packages/ifos/package.json
+++ b/packages/ifos/package.json
@@ -12,8 +12,8 @@
     "@pancakeswap/sdk": "workspace:*",
     "@pancakeswap/tokens": "workspace:*",
     "@pancakeswap/utils": "workspace:*",
-    "viem": "2.13.3",
-    "wagmi": "2.9.8"
+    "viem": "catalog:",
+    "wagmi": "catalog:"
   },
   "dependencies": {
     "@layerzerolabs/scan-client": "^0.0.6",
@@ -25,7 +25,7 @@
     "@pancakeswap/tokens": "workspace:*",
     "@pancakeswap/tsconfig": "workspace:*",
     "@pancakeswap/utils": "workspace:*",
-    "viem": "2.13.3",
-    "wagmi": "2.9.8"
+    "viem": "catalog:",
+    "wagmi": "catalog:"
   }
 }
