--- a/packages/permit2-sdk/package.json
+++ b/packages/permit2-sdk/package.json
@@ -36,7 +36,7 @@
     "@pancakeswap/chains": "workspace:*",
     "@pancakeswap/sdk": "workspace:*",
     "tiny-invariant": "^1.3.1",
-    "viem": "2.13.3"
+    "viem": "catalog:"
   },
   "devDependencies": {
     "tslib": "^2.6.2",
