--- a/packages/pools/package.json
+++ b/packages/pools/package.json
@@ -22,7 +22,7 @@
     "@pancakeswap/tokens": "workspace:*",
     "bignumber.js": "^9.0.0",
     "lodash": "^4.17.21",
-    "viem": "2.13.3"
+    "viem": "catalog:"
   },
   "devDependencies": {
     "@pancakeswap/tsconfig": "workspace:*",
