--- a/packages/position-managers/package.json
+++ b/packages/position-managers/package.json
@@ -15,7 +15,7 @@
     "@pancakeswap/v3-sdk": "workspace:*",
     "bignumber.js": "^9.0.0",
     "lodash": "^4.17.21",
-    "viem": "2.13.3"
+    "viem": "catalog:"
   },
   "devDependencies": {
     "@pancakeswap/tsconfig": "workspace:*",
