--- a/packages/smart-router/package.json
+++ b/packages/smart-router/package.json
@@ -40,7 +40,7 @@
     "mnemonist": "^0.38.3",
     "stats-lite": "^2.2.0",
     "tiny-invariant": "^1.3.0",
-    "viem": "2.13.3",
+    "viem": "catalog:",
     "zod": "^3.22.3"
   },
   "devDependencies": {
