--- a/packages/swap-sdk-evm/package.json
+++ b/packages/swap-sdk-evm/package.json
@@ -27,7 +27,7 @@
     "@pancakeswap/swap-sdk-core": "workspace:*",
     "tiny-invariant": "^1.3.0",
     "tiny-warning": "^1.0.3",
-    "viem": "2.13.3"
+    "viem": "catalog:"
   },
   "devDependencies": {
     "@pancakeswap/tsconfig": "workspace:*",
