--- a/packages/swap-sdk/package.json
+++ b/packages/swap-sdk/package.json
@@ -43,7 +43,7 @@
     "tiny-invariant": "^1.3.0",
     "tiny-warning": "^1.0.3",
     "toformat": "^2.0.0",
-    "viem": "2.13.3"
+    "viem": "catalog:"
   },
   "devDependencies": {
     "@types/big.js": "^4.0.5",
