--- a/packages/v4-sdk/package.json
+++ b/packages/v4-sdk/package.json
@@ -30,7 +30,7 @@
     "@pancakeswap/swap-sdk-core": "workspace:*",
     "@pancakeswap/v3-sdk": "workspace:*",
     "tiny-invariant": "^1.3.3",
-    "viem": "2.13.3"
+    "viem": "catalog:"
   },
   "devDependencies": {
     "@pancakeswap/sdk": "workspace:*",
