--- a/packages/wagmi/package.json
+++ b/packages/wagmi/package.json
@@ -20,8 +20,8 @@
     "@blocto/sdk": "^0.5.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "viem": "2.13.3",
-    "wagmi": "2.9.8",
+    "viem": "catalog:",
+    "wagmi": "catalog:",
     "@tanstack/react-query": "^5.28.4"
   },
   "devDependencies": {
@@ -31,8 +31,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "tsup": "^6.7.0",
-    "viem": "2.13.3",
-    "wagmi": "2.9.8"
+    "viem": "catalog:",
+    "wagmi": "catalog:"
   },
   "exports": {
     "./package.json": "./package.json",
