--- a/packages/widgets-internal/package.json
+++ b/packages/widgets-internal/package.json
@@ -25,17 +25,17 @@
     "d3": "^7.8.2",
     "dayjs": "^1.11.10",
     "lodash": "^4.17.21",
-    "viem": "2.13.3"
+    "viem": "catalog:"
   },
   "peerDependencies": {
-    "@sentry/nextjs": "^7.0.0",
+    "@sentry/nextjs": "^8.0.0",
     "next": "14.2.3",
     "react": "^18.2.0",
     "styled-components": "6.0.7",
     "styled-system": "^5.1.5"
   },
   "devDependencies": {
-    "@sentry/nextjs": "^7.0.0",
+    "@sentry/nextjs": "^8.0.0",
     "@types/lodash": "^4.14.168",
     "@types/react": "^18.2.21",
     "@types/styled-system": "^5.1.17",
