--- a/apps/bridge/package.json
+++ b/apps/bridge/package.json
@@ -33,6 +33,7 @@
     "@pancakeswap/uikit": "workspace:*",
     "@pancakeswap/utils": "workspace:*",
     "@vanilla-extract/next-plugin": "^2.3.0",
+    "@wagmi/core": "^0.10.11",
     "@wormhole-foundation/wormhole-connect": "0.1.7",
     "ethers": "^5.0.0",
     "jotai": "^2.4.3",
