--- a/apps/gamification/package.json
+++ b/apps/gamification/package.json
@@ -55,6 +55,7 @@
     "@wagmi/core": "2.10.5",
     "bignumber.js": "^9.1.2",
     "blocto": "link:@pancakeswap/wagmi/connectors/blocto",
+    "crypto-js": "^4.2.0",
     "dayjs": "^1.11.10",
     "easymde": "2.16.1",
     "graphql": "^16.8.1",
@@ -65,6 +66,7 @@
     "next-auth": "^4.24.7",
     "next-seo": "^5.15.0",
     "next-themes": "^0.2.1",
+    "oauth-1.0a": "^2.2.6",
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
