fix: fail to build uikit

--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "dev:bridge": "pnpm turbo run dev --filter=bridge... --parallel --continue",
     "dev:games": "pnpm turbo run dev --filter=games... --parallel --continue",
     "dev:gamification": "pnpm turbo run dev --filter=gamification... --parallel --continue",
-    "storybook": "turbo run start --filter=uikit...",
-    "build:storybook": "turbo run build:storybook --filter=uikit...",
+    "storybook": "turbo run start --filter=@pancakeswap/uikit...",
+    "build:storybook": "turbo run build:storybook --filter=@pancakeswap/uikit...",
     "build": "turbo run build --filter=web...",
     "build:blog": "turbo run build --filter=blog...",
     "build:aptos": "turbo run build --filter=aptos-web...",
