--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "dev:bridge": "pnpm turbo run dev --filter=bridge... --parallel --continue",
     "dev:games": "pnpm turbo run dev --filter=games... --parallel --continue",
     "dev:gamification": "pnpm turbo run dev --filter=gamification... --parallel --continue",
-    "storybook": "turbo run start --filter=uikit...",
-    "build:storybook": "turbo run build:storybook --filter=uikit...",
+    "storybook": "turbo run start --filter=@pancakeswap/uikit...",
+    "build:storybook": "turbo run build:storybook --filter=@pancakeswap/uikit...",
     "build": "turbo run build --filter=web...",
     "build:blog": "turbo run build --filter=blog...",
     "build:aptos": "turbo run build --filter=aptos-web...",
@@ -67,7 +67,7 @@
     "stylelint-config-styled-components": "^0.1.1",
     "tilg": "^0.1.1",
     "tsx": "^4.6.1",
-    "turbo": "1.10.2",
+    "turbo": "2.0.6",
     "typescript": "5.2.2",
     "vitest": "^1.5.0",
     "wrangler": "2.20.2"
