--- a/apps/gamification/package.json
+++ b/apps/gamification/package.json
@@ -51,6 +51,7 @@
     "@pancakeswap/widgets-internal": "workspace:*",
     "@reduxjs/toolkit": "^1.9.1",
     "@tanstack/react-query": "^5.28.4",
+    "@telegram-auth/server": "^1.0.3",
     "@vanilla-extract/next-plugin": "^2.3.0",
     "@wagmi/core": "2.10.5",
     "bignumber.js": "^9.1.2",
@@ -62,7 +63,7 @@
     "jotai": "^2.4.3",
     "lodash": "^4.17.21",
     "next": "14.2.3",
-    "oauth": "0.10.0",
+    "next-auth": "^4.24.7",
     "next-seo": "^5.15.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
@@ -70,8 +71,8 @@
     "react-dom": "^18.2.0",
     "react-draggable-list": "4.0.4",
     "react-images-uploading": "^3.1.7",
-    "react-popper": "^2.3.0",
     "react-jazzicon": "^1.0.4",
+    "react-popper": "^2.3.0",
     "react-redux": "^8.0.5",
     "react-window": "^1.8.7",
     "react-wrap-balancer": "^0.4.0",
@@ -96,12 +97,12 @@
     "@types/react-redux": "^7.1.24",
     "@types/react-window": "^1.8.8",
     "@types/styled-system": "^5.1.17",
+    "eslint": "^8.32.0",
+    "eslint-plugin-lodash": "^7.4.0",
     "stylelint": "^14.5.3",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recommended": "^7.0.0",
     "stylelint-config-standard": "^25.0.0",
-    "stylelint-config-styled-components": "^0.1.1",
-    "eslint": "^8.32.0",
-    "eslint-plugin-lodash": "^7.4.0"
+    "stylelint-config-styled-components": "^0.1.1"
   }
 }
